<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.meeting.MeetingActivity">

    <LinearLayout
        android:padding="@dimen/padding_size_16"
        android:id="@+id/linear_layout_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_top"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tanggal_dan_waktu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:clickable="true"
            android:cursorVisible="false"
            android:padding="@dimen/padding_size_8"
            android:background="@drawable/btn_bg"
            android:hint="@string/hint_date_and_time"
            android:textSize="@dimen/text_size_18sp"
            android:layout_marginBottom="@dimen/margin_size_8"/>



        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_lama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:padding="@dimen/padding_size_8"
            android:background="@drawable/btn_bg"
            android:hint="@string/hint_duration"
            android:textSize="@dimen/text_size_18sp"
            android:layout_marginBottom="@dimen/margin_size_8"/>

        <com.google.android.material.button.MaterialButton
            app:cornerRadius="@dimen/corner_radius_16"
            android:id="@+id/btn_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/hint_search"
            android:textColor="#ffff" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_below="@id/linear_layout_search"
        android:id="@+id/rv_meeting"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ProgressBar
        android:visibility="invisible"
        android:layout_centerInParent="true"
        android:id="@+id/pb_meeting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</RelativeLayout>